<resources>
    <string name="app_name">ChallengeSilverChapter4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="welcome_username">Welcome, Username!</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="input_data">Input Data</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="edit_data">Edit Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="don_t_have_account">Don\'t have account?</string>
</resources>